--- a/beauty-project2/tra/src/main/webapp/tpl/page_signin.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/page_signin.html
@@ -1,4 +1,9 @@
 <div class="container w-xxl w-auto-xs" ng-controller="SigninFormController" ng-init="app.settings.container = false;">
+  <img src="img/bg1.jpg" style="position:absolute;
+    z-index: -1;
+    margin-left: -800px;
+    top: 0px;
+    height:1000px">
   <a href class="navbar-brand block m-t">{{app.name}}</a>
   <div class="m-b-lg">
     <div class="wrapper text-center">
@@ -16,12 +21,11 @@
            <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
         </div>
       </div>
-      <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" ng-disabled='form.$invalid'>登陆</button>
-      <div class="text-center m-t m-b"><a ui-sref="access.forgotpwd">忘记密码?</a></div>
+      <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" ng-disabled='form.$invalid' style="background:green">登陆</button>
+      <div class="text-center m-t m-b"><a ui-sref="access.forgotpwd" style="color:red;">忘记密码?</a></div>
       <div class="line line-dashed"></div>
 <!--      <p class="text-center"><small>Do not have an account?</small></p>-->
 <!--      <a ui-sref="access.signup" class="btn btn-lg btn-default btn-block">Create an account</a>-->
     </form>
   </div>
-<!--  <div class="text-center" ng-include="'tpl/blocks/page_footer.html'"></div>-->
 </div>
