--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.waterway.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.waterway.html
@@ -1,4 +1,3 @@
-
 <div ng-controller="WaterwayYunZhengWaterwayCtrl">
 
   <div class="wrapper bg-light lter b-b">
@@ -10,7 +9,6 @@
           </div>
           <div class="row wrapper" ng-if="fold=='draft'">
             <div class="col-sm-5 m-b-xs">
-
             </div>
             <div class="col-sm-4">
             </div>
@@ -32,9 +30,38 @@
               </tr>
               </thead>
               <tbody>
-              <tr  ng-repeat="k in [0,1,2,3,4]">
-                <td>1</td>
-                <td ng-repeat="info in tableTitle[0]"></td>
+              <tr  ng-repeat="k in sslyzgl_slysyhzt">
+                <td>{{$index+1}}</td>
+                <td>{{k.unitno}}</td><!--经营者管理机构编码-->
+                <td>{{k.enterprisename}}</td><!--经营者名称-->
+                <td>{{k.jjkind}}</td><!--经营者的经济类型-->
+                <td>{{k.enterpriseno}}</td><!--组织机构代码-->
+                <td></td><!--注册资金-->
+                <td>{{k.lawman}}</td><!--法人代表-->
+                <td>{{k.address}}</td><!--详细地址-->
+                <td>{{k.postcode}}</td><!--邮政编码-->
+                <td>{{k.telephone}}</td><!--联系电话-->
+                <td>{{k.faxno}}</td><!--传真号码-->
+                <td></td><!--首次发证日期-->
+                <td></td><!--批准机关-->
+                <td></td><!--批准文号-->
+                <td></td><!--许可证号-->
+                <td></td><!--最近发证日期-->
+                <td></td><!--经营期限-->
+                <td></td><!--有效期的开始日期-->
+                <td></td><!--有效期的截止日期-->
+                <td></td><!--经营范围：客运-->
+                <td></td><!--经营范围：货运-->
+                <td></td><!--经营范围：兼营-->
+                <td>{{k.gkkind}}</td><!--经营范围分类-->
+                <td></td><!--最近年审日期（冗余）-->
+                <td></td><!--最近年审结果（冗余）-->
+                <td></td><!--盈利状态（冗余）-->
+                <td></td><!--注销日期（冗余）-->
+                <td></td><!--许可申请号-->
+                <td></td><!--许可申请状态-->
+                <td></td><!--简要说明-->
+                <td></td><!--台帐档案号-->
               </tr>
               </tbody>
             </table>
