--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.ship.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.ship.html
@@ -1,4 +1,3 @@
-
 <div ng-controller="WaterwayYunZhengShipCtrl">
 
   <div class="wrapper bg-light lter b-b">
@@ -16,11 +15,11 @@
             </div>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="text" class="input-sm form-control" placeholder="输入水运或服务企业编号" ng-if="fold=='d'">
-                <input type="text" class="input-sm form-control" placeholder="输入船舶名称"  ng-if="fold=='e'">
-                <input type="text" class="input-sm form-control" placeholder="输入船舶编码"  ng-if="fold=='i'">
+                <input type="text" class="input-sm form-control" placeholder="输入水运或服务企业编号" ng-if="fold=='d'" ng-model="pageParam.requestData">
+                <input type="text" class="input-sm form-control" placeholder="输入船舶名称"  ng-if="fold=='e'" ng-model="pageParam.requestData">
+                <input type="text" class="input-sm form-control" placeholder="输入船舶编码"  ng-if="fold=='i'" ng-model="pageParam.requestData">
                 <span class="input-group-btn">
-                    <button class="btn btn-sm btn-default" type="button">搜索</button>
+                    <button class="btn btn-sm btn-default" type="button" ng-click="searchData()">搜索</button>
                 </span>
               </div>
             </div>
@@ -29,46 +28,105 @@
             <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='d'">
               <thead>
               <tr>
-                <th>序号</th>
                 <th ng-repeat="info in tableTitle[0]">{{info}}</th>
               </tr>
               </thead>
               <tbody>
-              <tr  ng-repeat="k in [0,1,2,3,4]">
-                <td>1</td>
-                <td ng-repeat="info in tableTitle[0]"></td>
+              <tr  ng-repeat="k in sslyzgl_yycbxx">
+                <td></td><!--序号-->
+                <td></td><!--水运企业或个体业主编号-->
+                <td></td><!--船检登记号-->
+                <td></td><!--船舶识别号-->
+                <td></td><!--船籍港-->
+                <td></td><!--船舶名称-->
+                <td></td><!--曾用名-->
+                <td></td><!--船舶类型编码-->
+                <td></td><!--船舶标准类型-->
+                <td></td><!--船舶材料-->
+                <td></td><!--燃料类型-->
+                <td></td><!--船舶总吨-->
+                <td></td><!--总载重量-->
+                <td></td><!--净载重量-->
+                <td></td><!--车位数-->
+                <td></td><!--载客量-->
+                <td></td><!--箱位数-->
+                <td></td><!--船舱容积立方米-->
+                <td></td><!--主机台数-->
+                <td></td><!--主机合计功率-->
+                <td></td><!--总长（米）-->
+                <td></td><!--型宽（米）-->
+                <td></td><!--满载吃水（米)-->
+                <td></td><!--航速（节）-->
+                <td></td><!--建成日期-->
+                <td></td><!--改建日期-->
+                <td></td><!--航区-->
+                <td></td><!--船旗国-->
+                <td></td><!--控制状态-->
+                <td></td><!--船舶所有人-->
+                <td></td><!--船舶所有人电话-->
+                <td></td><!--船舶管理人-->
+                <td></td><!--船舶管理人许可证号-->
+                <td></td><!--营运证制作机构编码-->
+                <td></td><!--营运证号-->
+                <td></td><!--营运证经营范围-->
+                <td></td><!--制证日期-->
+                <td></td><!--有效截至期-->
+                <td></td><!--许可证有效截至日期（冗余）-->
+                <td></td><!--最近年审日期（冗余）-->
+                <td></td><!--最近年审结果（冗余）-->
+                <td></td><!--最近变更日期（冗余）-->
+                <td></td><!--最近变更（冗余）-->
+                <td></td><!--许可申请号-->
+                <td></td><!--许可申请状态-->
               </tr>
               </tbody>
             </table>
             <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='e'">
               <thead>
               <tr>
-                <th>序号</th>
                 <th ng-repeat="info in tableTitle[1]">{{info}}</th>
               </tr>
               </thead>
               <tbody>
-              <tr  ng-repeat="k in [0,1,2,3,4]">
-                <td>1</td>
-                <td ng-repeat="info in tableTitle[1]"></td>
+              <tr  ng-repeat="k in sslyzgl_cblxdm">
+                <td></td><!--序号-->
+                <td></td><!--船舶类型代码-->
+                <td></td><!--船舶类型名称-->
               </tr>
               </tbody>
             </table>
             <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='i'">
               <thead>
               <tr>
-                <th>序号</th>
                 <th ng-repeat="info in tableTitle[2]">{{info}}</th>
               </tr>
               </thead>
               <tbody>
-              <tr  ng-repeat="k in [0,1,2,3,4]">
-                <td>1</td>
-                <td ng-repeat="info in tableTitle[2]"></td>
+              <tr  ng-repeat="k in sslyzgl_yscbml">
+                <td></td><!--序号-->
+                <td></td><!--报表年份-->
+                <td></td><!--船舶编码-->
+                <td></td><!--唯一编码-->
+                <td></td><!--船检登记号-->
+                <td></td><!--管辖机构编码-->
+                <td></td><!--船舶经营人-->
+                <td></td><!--船名-->
+                <td></td><!--船舶类型名-->
+                <td></td><!--船旗国-->
+                <td></td><!--航区-->
+                <td></td><!--型宽（米）-->
+                <td></td><!--满载吃水（米）-->
+                <td></td><!--航速（节）-->
+                <td></td><!--船舶总吨-->
+                <td></td><!--总载重量-->
+                <td></td><!--净载重量-->
+                <td></td><!--载客量-->
+                <td></td><!--箱位数-->
+                <td></td><!--主机合计功率-->
+                <td></td><!--简要说明-->
               </tr>
               </tbody>
             </table>
-
           </div>
           <footer class="panel-footer">
             <div class="row">
@@ -80,13 +138,13 @@
               </div>
               <div class="col-sm-4 text-right text-center-xs">
                 <ul class="pagination pagination-sm m-t-none m-b-none">
-                  <li><a href><i class="fa fa-chevron-left"></i></a></li>
-                  <li><a href>1</a></li>
-                  <li><a href>2</a></li>
-                  <li><a href>3</a></li>
-                  <li><a href>4</a></li>
-                  <li><a href>5</a></li>
-                  <li><a href><i class="fa fa-chevron-right"></i></a></li>
+                  <li><a ng-click="prevPage()"><i class="fa fa-chevron-left"></i></a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo)"><a href>{{pageParam.pageNo}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+1)"><a href>{{pageParam.pageNo+1}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+2)"><a href>{{pageParam.pageNo+2}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+3)"><a href>{{pageParam.pageNo+3}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+4)"><a href>{{pageParam.pageNo+4}}</a></li>
+                  <li><a ng-click="nextPage()"><i class="fa fa-chevron-right"></i></a></li>
                 </ul>
               </div>
             </div>
